src/objects/ProductConsumed.object
<CustomObject>
    <fields>
        <fullName>DE_Asset_Number__c</fullName>
        <label>Asset Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Total_Effective_Amount__c</fullName>
        <label>Effective Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>UnitPrice *  QuantityConsumed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>